# robocon-rs

./: Cargo.toml
src/: lib.rs  sbtp.rs  util.rs
src/components/: gamepad.rs  mod.rs  motor.rs  omni.rs  rotary_encoder.rs  switch.rs
src/node/: command.rs  id.rs  message.rs  mod.rs
