[package]
name = "robocon-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bit_field = "0.10.2"
bitfield-struct = "0.10.1"
embedded-can = "0.4.1"
embedded-io-async = "0.6.1"
heapless = "0.8.0"
micromath = "2.1.0"
num_enum = "0.7.3"

[dependencies.nom]
version = "7"
default-features = false
features = []
