[package]
name = "robocon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bit_field = "0.10.2"
bitfield-struct = "0.9.5"
embedded-can = "0.4.1"
embedded-hal = "1.0.0"
embedded-io-async = "0.6.1"
heapless = "0.8.0"
micromath = "2.1.0"

[dependencies.advanced-pid]
version = "0.2.2"
default-features = false

[dependencies.num_enum]
version = "0.7.3"
default-features = false

[dependencies.nom]
version = "7"
default-features = false
